# arduino

./: .gitignore  Dockerfile  docker-compose.yml  manage_dev.py  pyproject.toml
apps/backoffice/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
apps/backoffice/migrations/: 0001_initial.py
apps/main_app/: admin.py  models.py  serializers.py  urls.py  views.py
apps/main_app/migrations/: 0001_initial.py  0002_alter_item_direction_alter_item_latitude_and_more.py  0002_item_transmitter_id.py  0003_alter_item_direction_alter_item_latitude_and_more.py  0003_alter_item_transmitter_id.py
apps/users/: managers.py  models.py  serializers.py  urls.py  views.py
apps/users/migrations/: 0001_initial.py
core/: logger_settings.py  nginx.conf  settings.py  settings_test.py  urls.py
